--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "connect-mongo": "^4.6.0",
     "cors": "2.8.5",
     "dompurify": "^2.3.6",
     "express": "4.17.1",
@@ -57,6 +58,7 @@
     "mongo-sanitize": "^1.1.0",
     "mongodb": "3.3.2",
     "mongoose": "5.7.1",
+    "mongoose-deep-populate": "^3.2.0",
     "node-sass": "^4.13.0",
     "nodemon": "1.19",
     "npm-run-all": "^4.1.5",
